objects/BMCServiceDesk__BMC_Rack__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Height__c</fullName>
        <label>Height</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Type_of_Rack__c</fullName>
        <label>Type of Rack</label>
        <picklist>
            <picklistValues>
                <fullName>Standard 19 Inch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>